--- a/cut.html
+++ b/cut.html
@@ -128,7 +128,7 @@
   </head>
 
   <body>
-    <div class="container" style="margin-left: 5em">
+    <div class="container" style="margin-left: 5em;">
       <h2>Фрагмент <span class="fragmentId"></span></h2>
       <h3>Фигуры митоза <a href="#">сменить</a></h3>
 
