--- a/deepzoom.html
+++ b/deepzoom.html
@@ -8,6 +8,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
@@ -17,6 +18,7 @@
       integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
       crossorigin=""
     />
+
     <script
       src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
@@ -28,17 +30,20 @@
 
       $(document).ready(() => {
         $(".slideId").append(slideId);
-        $("#downloadslide").append(
-          `<a href="https://krang-dataset.website.yandexcloud.net/${slideId}.tiff">Скачать слайд ${slideId}.tiff</a>`
-        );
 
-        var bounds = [
+        $("#downloadslide").append(`
+					<a href="https://krang-dataset.website.yandexcloud.net/${slideId}.tiff">
+						Скачать слайд ${slideId}.tiff
+					</a>
+				`);
+
+        const bounds = [
           [0, 0],
           [-1500, 1000],
         ];
 
         // Init Leaflet
-        var map = L.map("map", {
+        const map = L.map("map", {
           crs: L.CRS.Simple,
           maxBounds: bounds,
         });
@@ -54,7 +59,7 @@
             tileSize: 2048,
             noWrap: true,
             attributionControl: false,
-            bounds: bounds,
+            bounds,
           }
         ).addTo(map);
 
@@ -65,12 +70,14 @@
         });
       });
     </script>
+
     <style>
       html,
       body {
         height: 100%;
         margin: 0;
       }
+
       .leaflet-container {
         height: 60em;
         width: 60vw;
@@ -79,6 +86,7 @@
         border: 2px solid cyan;
         background: white;
       }
+
       .leaflet-control-attribution {
         display: none;
       }
@@ -134,7 +142,9 @@
           <td>Источник препарата</td>
           <td><a href="#">ДГТУ</a></td>
         </tr>
-        <tr><td colspan="2" id="downloadslide"></td></tr>
+        <tr>
+          <td colspan="2" id="downloadslide"></td>
+        </tr>
       </table>
     </div>
     <!-- /container -->
