Update styles & layouts & Fix errors

--- a/cut.html
+++ b/cut.html
@@ -129,8 +129,14 @@
 
   <body>
     <div class="container" style="margin-left: 5em;">
-      <h2>Фрагмент <span class="fragmentId"></span></h2>
-      <h3>Фигуры митоза <a href="#">сменить</a></h3>
+      <h2>
+        Фрагмент
+        <span class="fragmentId"></span>
+      </h2>
+      <h3>
+        Фигуры митоза
+        <a href="#">сменить</a>
+      </h3>
 
       <div id="fragment_viewer">
         <img
