--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <body>
     <nav class="cuts">
-      <!-- <a href="cuts.html">Cuts</a> -->
+      <a href="cuts.html">Cuts</a>
     </nav>
 
     <main class="container">
