--- a/cuts.html
+++ b/cuts.html
@@ -11,7 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
-    <link href="src/overview.css" rel="stylesheet" />
+    <link href="src/main.css" rel="stylesheet" />
+
     <title>Krang Dataset - Cuts</title>
 
     <script>
