--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     />
 
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
     />
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -22,57 +24,101 @@
     <script>
       globalThis.store = { ...(globalThis.store ?? {}) };
 
-      const Card = ({ id, fragments = {}, previewURL }) => {
-        const hasFragments = Object.keys(fragments).length > 0;
+      const iconSVGPaths = {
+        bagCheck: `
+          <path
+            fill-rule="evenodd"
+            d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2
+              2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zm-.646 5.354a.5.5 0
+              0 0-.708-.708L7.5 10.793 6.354 9.646a.5.5 0 1 0-.708.708l1.5
+              1.5a.5.5 0 0 0 .708 0l3-3z"
+          />
+        `,
 
-        const iconClasses = {
-          hasFragments: hasFragments ? "" : "hidden",
-          noFragments: hasFragments ? "hidden" : "",
-        };
+        bagMinus: `
+          <path
+            fill-rule="evenodd"
+            d="M5.5 10a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z"
+          />
 
-        console.log(fragments);
+          <path
+            d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5
+              3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0
+              2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"
+          />
+        `,
+      };
 
-        return `<a
-          href="deepzoom.html#${id}"
-          class="preview-card"
-          style="background-image: url(${previewURL})"
-        >
-          <div class="icons">
-            <p class="slide-id">${id}</p>
+      const Card = ({
+        id,
+        fragments = {},
+        fullImageURL = null,
+        previewURL,
+      }) => {
+        const hasFragments = Object.keys(fragments).length > 0,
+          hasFullImage = fullImageURL !== null;
 
-            <svg
-              class="${iconClasses.hasFragments}"
-              height="16"
-              fill="currentColor"
-              viewBox="0 0 16 16"
-              width="16"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zm-.646 5.354a.5.5 0 0 0-.708-.708L7.5 10.793 6.354 9.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0l3-3z"
-              />
-            </svg>
+        const labels = [
+          {
+            icon: `
+              <svg
+                height="16"
+                fill="currentColor"
+                viewBox="0 0 16 16"
+                width="16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                ${hasFragments ? iconSVGPaths.bagCheck : iconSVGPaths.bagMinus}
+              </svg>
+            `,
 
-            <svg
-              class="${iconClasses.noFragments}"
-              fill="currentColor"
-              height="16"
-              viewBox="0 0 16 16"
-              width="16"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M5.5 10a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z"
-              />
+            text: `${hasFragments ? "has" : "no"} fragments`,
+          },
 
-              <path
-                d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"
-              />
-            </svg>
-          </div>
-        </a>`;
+          {
+            icon: `
+              <svg
+                height="16"
+                fill="currentColor"
+                viewBox="0 0 16 16"
+                width="16"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                ${hasFullImage ? iconSVGPaths.bagCheck : iconSVGPaths.bagMinus}
+              </svg>
+            `,
+
+            text: `${hasFullImage ? "has" : "no"} full image`,
+          },
+        ];
+
+        return `
+          <a
+            href="deepzoom.html#${id}"
+            class="d-flex flex-column gap-3 pt-3
+              text-dark text-decoration-none
+              border border-2 border-dark-subtle bg-dark-subtle bg-opacity-25"
+            style="width:200px;height:fit-content;"
+          >
+            <h6 class="slide-id m-0 px-3">${id}</h6>
+
+            <div class="d-inline-flex flex-wrap gap-1 px-3">
+              ${labels
+                .map(
+                  ({ icon, text }) =>
+                    '<span class="d-inline-flex gap-2 align-items-center">' +
+                    icon +
+                    '<span style="white-space:pre;">' +
+                    text +
+                    "</span>" +
+                    "</span>"
+                )
+                .join("")}
+            </div>
+
+            <img class="w-100" style="height:fit-content;" src="${previewURL}" />
+          </a>
+        `;
       };
 
       $(document).ready(() => {
@@ -105,7 +151,10 @@
     <main class="container">
       <h1>Сканы гистологических препаратов головного мозга</h1>
 
-      <div id="overview" class="asset-catalog"></div>
+      <div
+        id="overview"
+        class="d-flex flex-wrap justify-content-evenly gap-3"
+      ></div>
     </main>
     <!-- /container -->
   </body>
