--- a/index.html
+++ b/index.html
@@ -25,28 +25,17 @@
       globalThis.store = { ...(globalThis.store ?? {}) };
 
       const iconSVGPaths = {
-        bagCheck: `
+        check: `
           <path
-            fill-rule="evenodd"
-            d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5zm1 0V4H15v10a2 2 0 0 1-2
-              2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0zm-.646 5.354a.5.5 0
-              0 0-.708-.708L7.5 10.793 6.354 9.646a.5.5 0 1 0-.708.708l1.5
-              1.5a.5.5 0 0 0 .708 0l3-3z"
-          />
-        `,
+            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417
+              5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0
+              1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />`,
 
-        bagMinus: `
+        cross: `
           <path
-            fill-rule="evenodd"
-            d="M5.5 10a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H6a.5.5 0 0 1-.5-.5z"
-          />
-
-          <path
-            d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5
-              3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0
-              2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"
-          />
-        `,
+            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647
+              2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707
+              8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />`,
       };
 
       const Card = ({
@@ -62,13 +51,13 @@
           {
             icon: `
               <svg
+                fill="${hasFragments ? "green" : "red"}"
                 height="16"
-                fill="currentColor"
                 viewBox="0 0 16 16"
                 width="16"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                ${hasFragments ? iconSVGPaths.bagCheck : iconSVGPaths.bagMinus}
+                ${hasFragments ? iconSVGPaths.check : iconSVGPaths.cross}
               </svg>
             `,
 
@@ -78,13 +67,13 @@
           {
             icon: `
               <svg
+                fill="${hasFullImage ? "green" : "red"}"
                 height="16"
-                fill="currentColor"
                 viewBox="0 0 16 16"
                 width="16"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                ${hasFullImage ? iconSVGPaths.bagCheck : iconSVGPaths.bagMinus}
+                ${hasFullImage ? iconSVGPaths.check : iconSVGPaths.cross}
               </svg>
             `,
 
